--- a/www/stylesheets/all.css
+++ b/www/stylesheets/all.css
@@ -580,7 +580,8 @@ a:hover h3, a:focus h3 {
 }
 
 
-/***/
+
+/* Language Switchers */
 a.lang-btn {
     margin-left: 5px;
     text-decoration: none;
